documentation/3.0.0/elements.md
---
layout: oldGuidelines
---
<div>
   <article class="page type-page status-publish hentry">
      <div class="entry-content">
         <div class="panel-grid">
            <div class="panel-grid-cell" style="width: 65%; float: left;">
               <div class="panel widget widget_text panel-first-child panel-last-child">
                  <h3 class="widget-title">MEI Elements</h3>
                  <div class="textwidget">
                     <div class="sortedInitials well a">
                        <h3>a</h3>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/abbr">abbr</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/accessRestrict">accessRestrict</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/accid">accid</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/actor">actor</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/add">add</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/addName">addName</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/addrLine">addrLine</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/address">address</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/altId">altId</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/anchoredText">anchoredText</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/annot">annot</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/app">app</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/appInfo">appInfo</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/application">application</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/arpeg">arpeg</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/arranger">arranger</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/artic">artic</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/audience">audience</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/author">author</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/avFile">avFile</a>
                        <a class="link_odd_elementSpec a" href="/documentation/3.0.0/availability">availability</a>
                     </div>
                     <div class="sortedInitials well b">
                        <h3>b</h3>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/bTrem">bTrem</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/back">back</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/barLine">barLine</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/barre">barre</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/beam">beam</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/beamSpan">beamSpan</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/beatRpt">beatRpt</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/bend">bend</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/bibl">bibl</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/biblList">biblList</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/biblScope">biblScope</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/bloc">bloc</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/body">body</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/breath">breath</a>
                        <a class="link_odd_elementSpec b" href="/documentation/3.0.0/byline">byline</a>
                     </div>
                     <div class="sortedInitials well c">
                        <h3>c</h3>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/caption">caption</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/captureMode">captureMode</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/carrierForm">carrierForm</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/castGrp">castGrp</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/castItem">castItem</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/castList">castList</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/cc">cc</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/chan">chan</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/chanPr">chanPr</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/change">change</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/changeDesc">changeDesc</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/choice">choice</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/chord">chord</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/chordDef">chordDef</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/chordMember">chordMember</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/chordTable">chordTable</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/classCode">classCode</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/classification">classification</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/clef">clef</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/clefGrp">clefGrp</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/clip">clip</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/componentGrp">componentGrp</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/composer">composer</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/condition">condition</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/contentItem">contentItem</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/contents">contents</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/context">context</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/corpName">corpName</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/corr">corr</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/correction">correction</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/country">country</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/cpMark">cpMark</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/creation">creation</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/cue">cue</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/curve">curve</a>
                        <a class="link_odd_elementSpec c" href="/documentation/3.0.0/custos">custos</a>
                     </div>
                     <div class="sortedInitials well d">
                        <h3>d</h3>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/damage">damage</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/date">date</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/del">del</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/depth">depth</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/desc">desc</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/dimensions">dimensions</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/dir">dir</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/distributor">distributor</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/district">district</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/div">div</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/dot">dot</a>
                        <a class="link_odd_elementSpec d" href="/documentation/3.0.0/dynam">dynam</a>
                     </div>
                     <div class="sortedInitials well e">
                        <h3>e</h3>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/edition">edition</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/editionStmt">editionStmt</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/editor">editor</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/editorialDecl">editorialDecl</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/encodingDesc">encodingDesc</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/ending">ending</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/event">event</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/eventList">eventList</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/exhibHist">exhibHist</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/expan">expan</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/expansion">expansion</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/expression">expression</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/expressionList">expressionList</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/extMeta">extMeta</a>
                        <a class="link_odd_elementSpec e" href="/documentation/3.0.0/extent">extent</a>
                     </div>
                     <div class="sortedInitials well f">
                        <h3>f</h3>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/f">f</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/fTrem">fTrem</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/facsimile">facsimile</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/famName">famName</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/fb">fb</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/fermata">fermata</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/fig">fig</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/figDesc">figDesc</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/fileChar">fileChar</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/fileDesc">fileDesc</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/fing">fing</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/fingGrp">fingGrp</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/fingerprint">fingerprint</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/foreName">foreName</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/front">front</a>
                        <a class="link_odd_elementSpec f" href="/documentation/3.0.0/funder">funder</a>
                     </div>
                     <div class="sortedInitials well g">
                        <h3>g</h3>
                        <a class="link_odd_elementSpec g" href="/documentation/3.0.0/gap">gap</a>
                        <a class="link_odd_elementSpec g" href="/documentation/3.0.0/genName">genName</a>
                        <a class="link_odd_elementSpec g" href="/documentation/3.0.0/genre">genre</a>
                        <a class="link_odd_elementSpec g" href="/documentation/3.0.0/geogFeat">geogFeat</a>
                        <a class="link_odd_elementSpec g" href="/documentation/3.0.0/geogName">geogName</a>
                        <a class="link_odd_elementSpec g" href="/documentation/3.0.0/gliss">gliss</a>
                        <a class="link_odd_elementSpec g" href="/documentation/3.0.0/graphic">graphic</a>
                        <a class="link_odd_elementSpec g" href="/documentation/3.0.0/group">group</a>
                        <a class="link_odd_elementSpec g" href="/documentation/3.0.0/grpSym">grpSym</a>
                     </div>
                     <div class="sortedInitials well h">
                        <h3>h</h3>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/hairpin">hairpin</a>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/halfmRpt">halfmRpt</a>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/hand">hand</a>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/handList">handList</a>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/handShift">handShift</a>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/harm">harm</a>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/harpPedal">harpPedal</a>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/head">head</a>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/height">height</a>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/hex">hex</a>
                        <a class="link_odd_elementSpec h" href="/documentation/3.0.0/history">history</a>
                     </div>
                     <div class="sortedInitials well i">
                        <h3>i</h3>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/identifier">identifier</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/imprint">imprint</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/incip">incip</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/incipCode">incipCode</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/incipText">incipText</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/ineume">ineume</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/inscription">inscription</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/instrDef">instrDef</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/instrGrp">instrGrp</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/interpretation">interpretation</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/item">item</a>
                        <a class="link_odd_elementSpec i" href="/documentation/3.0.0/itemList">itemList</a>
                     </div>
                     <div class="sortedInitials well k">
                        <h3>k</h3>
                        <a class="link_odd_elementSpec k" href="/documentation/3.0.0/key">key</a>
                        <a class="link_odd_elementSpec k" href="/documentation/3.0.0/keyAccid">keyAccid</a>
                        <a class="link_odd_elementSpec k" href="/documentation/3.0.0/keySig">keySig</a>
                     </div>
                     <div class="sortedInitials well l">
                        <h3>l</h3>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/l">l</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/label">label</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/langUsage">langUsage</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/language">language</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/layer">layer</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/layerDef">layerDef</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/lb">lb</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/lem">lem</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/lg">lg</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/li">li</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/librettist">librettist</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/ligature">ligature</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/line">line</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/list">list</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/lyricist">lyricist</a>
                        <a class="link_odd_elementSpec l" href="/documentation/3.0.0/lyrics">lyrics</a>
                     </div>
                     <div class="sortedInitials well m">
                        <h3>m</h3>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/mRest">mRest</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/mRpt">mRpt</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/mRpt2">mRpt2</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/mSpace">mSpace</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/mapping">mapping</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/marker">marker</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/mdiv">mdiv</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/measure">measure</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/mei">mei</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/meiCorpus">meiCorpus</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/meiHead">meiHead</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/mensur">mensur</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/mensuration">mensuration</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/metaText">metaText</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/meter">meter</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/meterSig">meterSig</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/meterSigGrp">meterSigGrp</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/midi">midi</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/mordent">mordent</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/multiRest">multiRest</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/multiRpt">multiRpt</a>
                        <a class="link_odd_elementSpec m" href="/documentation/3.0.0/music">music</a>
                     </div>
                     <div class="sortedInitials well n">
                        <h3>n</h3>
                        <a class="link_odd_elementSpec n" href="/documentation/3.0.0/name">name</a>
                        <a class="link_odd_elementSpec n" href="/documentation/3.0.0/nameLink">nameLink</a>
                        <a class="link_odd_elementSpec n" href="/documentation/3.0.0/normalization">normalization</a>
                        <a class="link_odd_elementSpec n" href="/documentation/3.0.0/note">note</a>
                        <a class="link_odd_elementSpec n" href="/documentation/3.0.0/noteOff">noteOff</a>
                        <a class="link_odd_elementSpec n" href="/documentation/3.0.0/noteOn">noteOn</a>
                        <a class="link_odd_elementSpec n" href="/documentation/3.0.0/notesStmt">notesStmt</a>
                        <a class="link_odd_elementSpec n" href="/documentation/3.0.0/num">num</a>
                     </div>
                     <div class="sortedInitials well o">
                        <h3>o</h3>
                        <a class="link_odd_elementSpec o" href="/documentation/3.0.0/octave">octave</a>
                        <a class="link_odd_elementSpec o" href="/documentation/3.0.0/orig">orig</a>
                        <a class="link_odd_elementSpec o" href="/documentation/3.0.0/ornam">ornam</a>
                        <a class="link_odd_elementSpec o" href="/documentation/3.0.0/ossia">ossia</a>
                        <a class="link_odd_elementSpec o" href="/documentation/3.0.0/otherChar">otherChar</a>
                     </div>
                     <div class="sortedInitials well p">
                        <h3>p</h3>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/p">p</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/pad">pad</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/part">part</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/parts">parts</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/pb">pb</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/pedal">pedal</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/perfDuration">perfDuration</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/perfMedium">perfMedium</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/perfRes">perfRes</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/perfResList">perfResList</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/performance">performance</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/periodName">periodName</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/persName">persName</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/pgDesc">pgDesc</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/pgFoot">pgFoot</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/pgFoot2">pgFoot2</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/pgHead">pgHead</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/pgHead2">pgHead2</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/phrase">phrase</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/physDesc">physDesc</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/physLoc">physLoc</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/physMedium">physMedium</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/plateNum">plateNum</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/playingSpeed">playingSpeed</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/port">port</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/postBox">postBox</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/postCode">postCode</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/price">price</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/prog">prog</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/projectDesc">projectDesc</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/propName">propName</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/propValue">propValue</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/proport">proport</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/provenance">provenance</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/ptr">ptr</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/pubPlace">pubPlace</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/pubStmt">pubStmt</a>
                        <a class="link_odd_elementSpec p" href="/documentation/3.0.0/publisher">publisher</a>
                     </div>
                     <div class="sortedInitials well q">
                        <h3>q</h3>
                        <a class="link_odd_elementSpec q" href="/documentation/3.0.0/quote">quote</a>
                     </div>
                     <div class="sortedInitials well r">
                        <h3>r</h3>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/rdg">rdg</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/recipient">recipient</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/recording">recording</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/ref">ref</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/reg">reg</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/region">region</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/reh">reh</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/relatedItem">relatedItem</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/relation">relation</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/relationList">relationList</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/rend">rend</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/repository">repository</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/resp">resp</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/respStmt">respStmt</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/rest">rest</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/restore">restore</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/revisionDesc">revisionDesc</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/role">role</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/roleDesc">roleDesc</a>
                        <a class="link_odd_elementSpec r" href="/documentation/3.0.0/roleName">roleName</a>
                     </div>
                     <div class="sortedInitials well s">
                        <h3>s</h3>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/samplingDecl">samplingDecl</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/sb">sb</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/score">score</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/scoreDef">scoreDef</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/scoreFormat">scoreFormat</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/section">section</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/segmentation">segmentation</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/seqNum">seqNum</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/series">series</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/seriesStmt">seriesStmt</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/settlement">settlement</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/sic">sic</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/slur">slur</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/soundChan">soundChan</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/source">source</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/sourceDesc">sourceDesc</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/space">space</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/specRepro">specRepro</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/sponsor">sponsor</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/stack">stack</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/staff">staff</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/staffDef">staffDef</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/staffGrp">staffGrp</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/stdVals">stdVals</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/street">street</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/styleName">styleName</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/subst">subst</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/supplied">supplied</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/surface">surface</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/syl">syl</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/syllable">syllable</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/symName">symName</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/symProp">symProp</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/symbol">symbol</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/symbolDef">symbolDef</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/symbolTable">symbolTable</a>
                        <a class="link_odd_elementSpec s" href="/documentation/3.0.0/sysReq">sysReq</a>
                     </div>
                     <div class="sortedInitials well t">
                        <h3>t</h3>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/table">table</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/td">td</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/tempo">tempo</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/term">term</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/termList">termList</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/textLang">textLang</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/th">th</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/tie">tie</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/title">title</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/titlePage">titlePage</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/titleStmt">titleStmt</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/tr">tr</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/trackConfig">trackConfig</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/treatHist">treatHist</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/treatSched">treatSched</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/trill">trill</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/trkName">trkName</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/tuplet">tuplet</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/tupletSpan">tupletSpan</a>
                        <a class="link_odd_elementSpec t" href="/documentation/3.0.0/turn">turn</a>
                     </div>
                     <div class="sortedInitials well u">
                        <h3>u</h3>
                        <a class="link_odd_elementSpec u" href="/documentation/3.0.0/unclear">unclear</a>
                        <a class="link_odd_elementSpec u" href="/documentation/3.0.0/uneume">uneume</a>
                        <a class="link_odd_elementSpec u" href="/documentation/3.0.0/unpub">unpub</a>
                        <a class="link_odd_elementSpec u" href="/documentation/3.0.0/useRestrict">useRestrict</a>
                     </div>
                     <div class="sortedInitials well v">
                        <h3>v</h3>
                        <a class="link_odd_elementSpec v" href="/documentation/3.0.0/vel">vel</a>
                        <a class="link_odd_elementSpec v" href="/documentation/3.0.0/verse">verse</a>
                     </div>
                     <div class="sortedInitials well w">
                        <h3>w</h3>
                        <a class="link_odd_elementSpec w" href="/documentation/3.0.0/watermark">watermark</a>
                        <a class="link_odd_elementSpec w" href="/documentation/3.0.0/when">when</a>
                        <a class="link_odd_elementSpec w" href="/documentation/3.0.0/width">width</a>
                        <a class="link_odd_elementSpec w" href="/documentation/3.0.0/work">work</a>
                        <a class="link_odd_elementSpec w" href="/documentation/3.0.0/workDesc">workDesc</a>
                     </div>
                     <div class="sortedInitials well z">
                        <h3>z</h3>
                        <a class="link_odd_elementSpec z" href="/documentation/3.0.0/zone">zone</a>
                     </div>
                  </div>
               </div>
            </div>
            <div class="panel-grid-cell" style="width: 35%; float: left;">
               <div class="panel widget widget_text panel-first-child panel-last-child">
                  <header class="entry-header">
                     <h1 class="entry-title">
                        MEI Guidelines 
                        <small>Version 3.0.0</small>
                     </h1>
                  </header>
                  <div class="textwidget">
                     <ul class="guidelinesList">
                        <li>
                           <a class="guidelines_mainLink" href="/documentation/3.0.0/chapters">MEI Guidelines</a>
                        </li>
                        <li>
                           <a class="guidelines_mainLink" href="/documentation/3.0.0/elements">Elements</a>
                        </li>
                        <li>
                           <a class="guidelines_mainLink" href="/documentation/3.0.0/atts">Attributes</a>
                        </li>
                        <li>
                           <a class="guidelines_mainLink" href="/documentation/3.0.0/models">Model Classes</a>
                        </li>
                        <li>
                           <a class="guidelines_mainLink" href="/documentation/3.0.0/data">Data Types</a>
                        </li>
                     </ul>
                  </div>
               </div>
            </div>
         </div>
      </div>
   </article>
</div>